--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
